2005/06/07	muppetman

	* xs/GnomeAboutDialog.xs: Actually store the instances created by
	Gtk2::show_about_dialog(), so that they can be reused.

2005/06/06	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.091.

2005/06/03	kaffeetisch

	* t/GtkFileChooserButton.t: Use "open" instead of "save" for the
	dialog since the button doesn't support "save".

2005/04/25	kaffeetisch

	* Gtk2.pm, Makefile.PL, META.yml, NEWS, README: Unstable release
	1.090.

2005/04/25	kaffeetisch

	* CodeGen.pm: Add const typemaps for object types.

	* t/GtkFileChooser.t: Skip this test completely as it's failing.

	* t/GtkAccelMap.t, t/GtkAccelGroup.t, t/GtkStock.t: Remove some
	TODO block since the relevant Test::More bug has been fixed.

	* gdk.typemap, maps-2.6, t/GdkPixbuf.t, xs/GdkPixbuf.xs: Bind and
	test gdk_pixbuf_new_from_file_at_scale, gdk_pixbuf_rotate_simple,
	gdk_pixbuf_flip, gdk_pixbuf_get_file_info, the new GdkPixbufFormat
	members and gdk_pixbuf_format_set_disabled.

	* t/GtkDnd.t, xs/GtkDnd.xs, xs/GtkNotebook.xs: Merge from
	stable-1-08: Update copyright disclaimers.

	* xs/GtkRadioAction.xs, xs/GtkToggleAction.xs: Add synopsis
	sections that show and explain our custom constructors for these
	types.

2005/04/17	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Merge from
	stable-1-08.

2005/04/08	rmcfarla

	* xs/GtkNotebook.xs: added pod comments to functions that now return 
	integers saying this is new as of Gtk2-Perl 1.080.

2005/04/07	kaffeetisch

	* xs/GdkDrawable.xs: Update a FIXME comment.

	* t/GtkAccelMap.t, xs/GtkAccelMap.xs: Bind and test
	gtk_accel_map_get, gtk_accel_map_lock_path,
	gtk_accel_map_unlock_path.

	* t/GtkAction.t, xs/GtkAction.xs: Bind and test
	gtk_action_get_accel_path.

	* t/GtkIconView.t, xs/GtkIconView.xs: Bind and test
	gtk_icon_view_set_columns, gtk_icon_view_get_columns,
	gtk_icon_view_set_item_width, gtk_icon_view_get_item_width,
	gtk_icon_view_set_spacing, gtk_icon_view_get_spacing,